Fix Press page layout issues

--- a/src/app/pages/press/bookings/booking/booking.html
+++ b/src/app/pages/press/bookings/booking/booking.html
@@ -1,11 +1,11 @@
 <template args="model">
-    <img src="{model.imageUrl}">
-    <div>
+    <img if="model.expert_image" src="{model.expert_image}">
+    <div class="{model.expert_image ? '' : 'span-2'}">
         <div class="name">{model.name}</div>
         <div>{model.title}</div>
-        <div>{model.contact}</div>
+        <div>{model.email}</div>
     </div>
-    <div data-html="bio" skip="true">
+    <div data-html="bio" class="span-2" skip="true">
         This should be replaced
     </div>
 </template>
