--- a/src/app/components/book-checkbox/book-checkbox.scss
+++ b/src/app/components/book-checkbox/book-checkbox.scss
@@ -18,7 +18,8 @@
     }
 
     &.checked {
-        background-color: ui-color(default);
+        background-color: darken(ui-color(default), 3%);
+        font-size: 1.1rem;
 
         > .indicator {
             background-color: ui-color(white);
