--- a/src/app/pages/about-new/about-new.scss
+++ b/src/app/pages/about-new/about-new.scss
@@ -59,13 +59,20 @@ $offset-bottom-section: 12rem;
         overflow-x: auto;
         padding: 4rem 0 2rem;
 
+        @include width-between($phone-max, $tablet-max) {
+            grid-template-columns: 26rem 26rem;
+        }
+
         .card {
             @extend %card;
 
             display: grid;
+            grid-template-rows: 15rem auto;
             overflow: hidden;
 
             img {
+                height: 100%;
+                place-self: center;
                 width: 100%;
             }
 
