Fix hero layout and move instructions paragraph on Bookstore Suppliers page

--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -3,6 +3,9 @@
 .bookstore-suppliers {
 
     @include width-up-to($phone-max) {
+        padding-left: $normal-margin;
+        padding-right: $normal-margin;
+
         .larger-screen {
             display: none;
         }
@@ -58,7 +61,6 @@
         }
 
         .images {
-            height: 100%;
             overflow: visible;
             position: relative;
             width: 100%;
