--- a/src/app/pages/blog/article/formatted-as/feature.html
+++ b/src/app/pages/blog/article/formatted-as/feature.html
@@ -1,5 +1,7 @@
 <template args="model">
-    <div class="hero" style="{backgroundImage: `url(${model.coverUrl})`}">
+    <div class="hero" style="{backgroundImage: `url(${model.coverUrl})`}"
+        role="img" aria-label="{model.featured_image_alt_text}"
+    >
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     </div>
     <article>
