--- a/src/app/pages/adoption/hidden-fields/hidden-fields.html
+++ b/src/app/pages/adoption/hidden-fields/hidden-fields.html
@@ -2,7 +2,7 @@
     <input name="utf8" type="hidden" value="✓">
     <input type="hidden" name="Application_Source__c" value="OS Web/Accounts">
     <input type="hidden" name="oid" value="{model.salesforce.oid}">
-    <input type="hidden" name="LeadSource" value="Adoption Form">
+    <input type="hidden" name="lead_source" value="Adoption Form">
     <input type="hidden" name="Role__c" value="Faculty">
     <input type="hidden" name="Subject__c" value="{model.book}">
     <input type="hidden" name="Adoption_Status__c" value={model.adoptionStatus}>
