--- a/src/app/pages/interest/hidden-fields/hidden-fields.html
+++ b/src/app/pages/interest/hidden-fields/hidden-fields.html
@@ -2,6 +2,6 @@
     <input name="utf8" type="hidden" value="✓">
     <input type="hidden" name="Application_Source__c" value="OS Web/Accounts">
     <input type="hidden" name="oid" value="{model.salesforce.oid}">
-    <input type="hidden" name="LeadSource" value="Interest Form">
+    <input type="hidden" name="lead_source" value="Interest Form">
     <input type="hidden" name="Role__c" value="Faculty">
 </template>
