Fix Bookstore Suppliers layout

--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -186,6 +186,10 @@
             }
         }
 
+        &.featured {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
         .card {
             @extend %card;
 
