--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
@@ -24,7 +24,7 @@
     <div if="model.suppliers" class="main-content">
         <div class="smaller-screen" data-html="subhead2" skip="true"></div>
         <div class="intro-blurb">{model.featuredSuppliersBlurb}</div>
-        <div class="cards {model.cardsClass}">
+        <div class="featured cards {model.cardsClass}">
             <div each="supplier in model.featuredSuppliers" class="card">
                 <div class="logo-dot">
                     <img src="{supplier.logoUrl}">
