Change bookstore button text

--- a/src/app/components/get-this-title-new/order-print-copy/order-print-copy.html
+++ b/src/app/components/get-this-title-new/order-print-copy/order-print-copy.html
@@ -32,7 +32,7 @@
                 <h1><span class="fa fa-users"></span> Bookstore</h1>
                 <div>Place a bulk order for a tax-exempt organization.</div>
                 <a class="btn secondary" href="{model.bookstoreLink}">
-                    Order with indiCo
+                    Order options
                 </a>
             </div>
             <div if="model.bulkLink" class="box">
