Change Polish errata link

--- a/src/app/pages/details/details-tab/details-tab-polish.html
+++ b/src/app/pages/details/details-tab/details-tab-polish.html
@@ -35,7 +35,7 @@
                 <h3>Errata</h3>
                 <p data-html="errataBlurb"></p>
                 <div class="button-group">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc87Eu8-nNJ6c-vW0FTuMXi-B_5I1x92wuvS_jryzOILRpqMQ/viewform"
+                    <a href="https://openstax.pl/pl/errata"
                      class="btn secondary medium">Zgłoś poprawkę</a>
                 </div>
             </div>
