Restore old adoption and interest forms
New forms available as adoption-new and interest-new

--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -1,3 +1,13 @@
-<div data-region="header" skip="true"></div>
-<img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-<div data-region="role-selector" class="text-content" skip="true"></div>
+<template args="model">
+    <div if="model.introHeading" class="hero">
+        <h1>{model.introHeading}</h1>
+        <div class="text-content">
+            <div data-html="introDescription" skip="true"></div>
+        </div>
+    </div>
+    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+    <div class="text-content {model.currentSection > 1 ? 'hidden' : ''}">
+        <plug-in data-id="selectedRole" skip="true"></plug-in>
+    </div>
+    <plug-in data-id="form" skip="true"></plug-in>
+</template>
