Page completed and some tests created

--- a/src/app/pages/research/alumni-tab/alumni-tab.html
+++ b/src/app/pages/research/alumni-tab/alumni-tab.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div each="entry in model" class="entry">
         <div class="name">{entry.name}</div>
-        <div class="description">{entry.description}</div>
+        <div class="description">{entry.title}</div>
     </div>
 </template>
