Interest form: restore Adoption Stage

--- a/src/app/pages/interest-new/hidden-fields/hidden-fields.html
+++ b/src/app/pages/interest-new/hidden-fields/hidden-fields.html
@@ -3,5 +3,7 @@
     <input type="hidden" name="Application_Source__c" value="OS Web/Accounts">
     <input type="hidden" name="oid" value="{model.salesforce.oid}">
     <input type="hidden" name="lead_source" value="Interest Form">
+    <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
     <input type="hidden" name="Role__c" value="Faculty">
+    <!-- <input type="hidden" name="debug" value="1"> [Debug mode] -->
 </template>
