Fix remaining form layout issues

--- a/src/app/pages/interest-new/interest.scss
+++ b/src/app/pages/interest-new/interest.scss
@@ -33,4 +33,8 @@
         color: text-color(helper);
         font-style: italic;
     }
+
+    [type="number"] {
+        max-width: 20rem;
+    }
 }
