--- a/src/app/pages/details/phone-view/errata-pane/errata-pane-polish.html
+++ b/src/app/pages/details/phone-view/errata-pane/errata-pane-polish.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div data-html="errataBlurb"></div>
     <div class="button-group">
-        <a href="/errata/form?book={encodeURIComponent(model.title)}"
+        <a href="https://openstax.pl/pl/errata"
             class="btn secondary">Zgłoś poprawkę</a>
     </div>
 </template>
