--- a/src/app/pages/team/people-tab/people-tab.scss
+++ b/src/app/pages/team/people-tab/people-tab.scss
@@ -77,12 +77,8 @@
             @include set-font(h4);
         }
 
-        &.description {
-            display: grid;
-            grid-gap: 2rem;
-            grid-template-rows: auto 1fr;
+        &.tooltip {
             position: relative;
-            text-align: left;
 
             @include wider-than($phone-max) {
                 grid-column-end: span 2;
@@ -111,6 +107,13 @@
                     color: inherit;
                 }
             }
+        }
+
+        &.bio {
+            display: grid;
+            grid-gap: 2rem;
+            grid-template-rows: auto 1fr;
+            text-align: left;
         }
     }
 }
