About page (new) UX fixes

--- a/src/app/pages/about-new/about-new.html
+++ b/src/app/pages/about-new/about-new.html
@@ -22,8 +22,8 @@
             </div>
         </div>
     </section>
-    <section class="where">
-        <div class="content">
+    <section class="where content">
+        <div class="text-content">
             <h1>{model.whereHeadline}</h1>
             <div data-html="whereBlurb" skip="true"></div>
         </div>
